--- a/simulate.ipynb
+++ b/simulate.ipynb
@@ -19,6 +19,8 @@
     "from hazard_models import ExponentialHazard\n",
     "from utility_learner import ProjectedVolumeLearner, diam\n",
     "from degradation_learner import DegradationLearner\n",
+    "from datetime import datetime\n",
+    "from pytz import timezone\n",
     "\n",
     "from utils import unit_ball_rejection_sample, correct_signs\n",
     "import matplotlib.pyplot as plt\n",
@@ -65,7 +67,7 @@
     "# --- 1. Simulation Configuration ---\n",
     "D = 4                                  # Dimension of context vectors\n",
     "LAMBDA_VAL = 0.001                     # Baseline hazard constant\n",
-    "NUM_CUSTOMERS = 20000                   # Total number of customers to simulate, i.e. T\n",
+    "NUM_CUSTOMERS = 40000                   # Total number of customers to simulate, i.e. T\n",
     "\n",
     "# Set a random seed for reproducibility\n",
     "np.random.seed(41)\n",
@@ -227,8 +229,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Starting simulation for 20000 customers...\n",
-      "  0%|          | 0/20000 [00:00<?, ?it/s]"
+      "INFO:root:Starting simulation for 40000 customers...\n",
+      "  0%|          | 0/40000 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -272,44 +274,30 @@
      "text": [
       "INFO:gurobipy:Academic license - for non-commercial use only - expires 2026-04-14\n",
       "INFO:root:Customer 1: Diameter: 1.0024\n",
-      "  0%|          | 1/20000 [00:02<15:47:43,  2.84s/it]INFO:root:Customer 2: Diameter: 0.7409\n",
-      "  0%|          | 2/20000 [00:06<16:50:59,  3.03s/it]INFO:root:Customer 3: Diameter: 0.5836\n",
-      "  0%|          | 3/20000 [00:09<17:59:18,  3.24s/it]INFO:root:Customer 4: Diameter: 0.5709\n",
-      "  0%|          | 4/20000 [00:13<19:09:49,  3.45s/it]INFO:root:Customer 5: Diameter: 0.3622\n",
-      "  0%|          | 5/20000 [00:17<20:25:41,  3.68s/it]INFO:root:Customer 6: Diameter: 0.2571\n",
-      "  0%|          | 6/20000 [00:21<21:39:09,  3.90s/it]INFO:root:Customer 7: Diameter: 0.4223\n",
-      "  0%|          | 7/20000 [00:26<23:03:37,  4.15s/it]INFO:root:Customer 7: Diameter: 0.5478\n",
-      "  0%|          | 8/20000 [00:31<24:47:07,  4.46s/it]INFO:root:Customer 7: Diameter: 0.5527\n",
-      "  0%|          | 9/20000 [00:36<26:25:56,  4.76s/it]INFO:root:Customer 8: Diameter: 0.2071\n",
-      "  0%|          | 10/20000 [00:42<28:19:02,  5.10s/it]INFO:root:Customer 9: Diameter: 0.3086\n",
-      "  0%|          | 11/20000 [00:48<30:05:47,  5.42s/it]INFO:root:Customer 10: Diameter: 0.1544\n",
-      "  0%|          | 12/20000 [00:55<31:56:03,  5.75s/it]INFO:root:Customer 10: Diameter: 0.1992\n",
-      "  0%|          | 13/20000 [01:02<34:02:33,  6.13s/it]INFO:root:Customer 11: Diameter: 0.1802\n",
-      "  0%|          | 14/20000 [01:09<36:04:31,  6.50s/it]INFO:root:Customer 12: Diameter: 0.1818\n",
-      "  0%|          | 15/20000 [01:17<37:43:17,  6.79s/it]INFO:root:Customer 12: Diameter: 0.0483\n",
-      "  0%|          | 16/20000 [01:25<39:28:56,  7.11s/it]INFO:root:Customer 12: Diameter: 0.0490\n",
-      "  0%|          | 17/20000 [01:33<41:11:33,  7.42s/it]INFO:root:Customer 12: Diameter: 0.0677\n",
-      "  0%|          | 18/20000 [01:41<43:07:21,  7.77s/it]INFO:root:Customer 12: Diameter: 0.0250\n",
-      "  0%|          | 19/20000 [01:50<44:56:54,  8.10s/it]INFO:root:Customer 12: Diameter: 0.0360\n",
-      "  0%|          | 20/20000 [01:59<46:46:23,  8.43s/it]INFO:root:Customer 13: Diameter: 0.0421\n",
-      "  0%|          | 21/20000 [02:09<48:38:31,  8.76s/it]INFO:root:Customer 14: Diameter: 0.0177\n",
-      "  0%|          | 22/20000 [02:19<50:24:28,  9.08s/it]INFO:root:Customer 14: Diameter: 0.0091\n",
-      "  0%|          | 23/20000 [02:29<52:09:13,  9.40s/it]INFO:root:Customer 15: Diameter: 0.0481\n",
-      "  0%|          | 24/20000 [02:39<53:47:43,  9.69s/it]INFO:root:Customer 15: Diameter: 0.0175\n",
-      "  0%|          | 25/20000 [02:50<55:17:37,  9.97s/it]INFO:root:Customer 15: Diameter: 0.0176\n",
-      "  0%|          | 26/20000 [03:01<57:01:32, 10.28s/it]INFO:root:Customer 16: Diameter: 0.0138\n",
-      "  0%|          | 27/20000 [03:12<58:34:34, 10.56s/it]INFO:root:Customer 16: Diameter: 0.0098\n",
-      "  0%|          | 28/20000 [03:23<59:54:06, 10.80s/it]INFO:root:Customer 16: Diameter: 0.0095\n",
-      "  0%|          | 29/20000 [03:35<61:08:54, 11.02s/it]INFO:root:Customer 17: Diameter: 0.0108\n",
-      "  0%|          | 30/20000 [03:47<63:20:13, 11.42s/it]"
+      "  0%|          | 1/40000 [00:02<33:17:41,  3.00s/it]INFO:root:Customer 2: Diameter: 0.7409\n",
+      "  0%|          | 2/40000 [00:06<35:52:36,  3.23s/it]INFO:root:Customer 3: Diameter: 0.5836\n",
+      "  0%|          | 3/40000 [00:10<38:19:28,  3.45s/it]INFO:root:Customer 4: Diameter: 0.5709\n",
+      "  0%|          | 4/40000 [00:13<40:16:58,  3.63s/it]INFO:root:Customer 5: Diameter: 0.3622\n",
+      "  0%|          | 5/40000 [00:18<42:30:02,  3.83s/it]INFO:root:Customer 6: Diameter: 0.2571\n",
+      "  0%|          | 6/40000 [00:22<45:26:37,  4.09s/it]INFO:root:Customer 7: Diameter: 0.4223\n",
+      "  0%|          | 7/40000 [00:27<49:10:18,  4.43s/it]INFO:root:Customer 7: Diameter: 0.5478\n",
+      "  0%|          | 8/40000 [00:33<52:44:26,  4.75s/it]INFO:root:Customer 7: Diameter: 0.5527\n",
+      "  0%|          | 9/40000 [00:39<56:47:51,  5.11s/it]"
      ]
     }
    ],
    "source": [
+    "pacific_tz = timezone('America/Los_Angeles')\n",
+    "current_time = datetime.now(pacific_tz).strftime(\"%Y%m%d_%H%M%S\")\n",
+    "\n",
     "# simulator.projected_volume_learner.is_terminated = True\n",
     "simulation_data = simulator.run(num_customers=NUM_CUSTOMERS)\n",
     "degradation_df = pd.DataFrame(simulator.degradation_history)\n",
-    "simulation_df = pd.DataFrame(simulator.history)"
+    "simulation_df = pd.DataFrame(simulator.history)\n",
+    "\n",
+    "degradation_df.to_csv(f'data/degradation_data_{current_time}.csv', index=False)\n",
+    "simulation_df.to_csv(f'data/simulation_data_{current_time}.csv', index=False)\n",
+    "simulator.save(f'models/simulator_{current_time}')"
    ]
   },
   {
