fixed agent knowledge

--- a/archived/simulate copy.ipynb
+++ b/archived/simulate copy.ipynb
@@ -21,7 +21,7 @@
     "from utility_learner import ProjectedVolumeLearner, diam\n",
     "from degradation_learner import DegradationLearner\n",
     "\n",
-    "from utils import unit_ball_rejection_sample\n",
+    "from utils import unit_ball_sample\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import logging\n",
@@ -44,7 +44,7 @@
     "\n",
     "def context_sampler() -> np.ndarray:\n",
     "    \"\"\"Samples a customer's context vector uniformly from the unit ball.\"\"\"\n",
-    "    return np.abs(unit_ball_rejection_sample(D))\n",
+    "    return np.abs(unit_ball_sample(D))\n",
     "\n",
     "def rental_sampler() -> float:\n",
     "    \"\"\"Samples a customer's desired rental duration from an exponential distribution.\"\"\"\n",
