--- a/plotting.ipynb
+++ b/plotting.ipynb
@@ -23,7 +23,7 @@
     "from datetime import datetime\n",
     "from pytz import timezone\n",
     "\n",
-    "from utils import unit_ball_rejection_sample, correct_signs\n",
+    "from utils import unit_ball_sample, correct_signs\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
     "from scipy.stats import gaussian_kde\n",
@@ -49,7 +49,7 @@
     "\n",
     "def context_sampler() -> np.ndarray:\n",
     "    \"\"\"Samples a customer's context vector uniformly from the unit ball.\"\"\"\n",
-    "    return np.abs(unit_ball_rejection_sample(D))\n",
+    "    return np.abs(unit_ball_sample(D))\n",
     "\n",
     "def rental_sampler() -> float:\n",
     "    \"\"\"Samples a customer's desired rental duration from an exponential distribution.\"\"\"\n",
