--- a/simulate.ipynb
+++ b/simulate.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6ab40bba",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,17 @@
       "\n",
       "Starting Value Iteration...\n",
       "Iteration 10/100 | Max Change (Delta): 0.419016\n",
-      "Iteration 20/100 | Max Change (Delta): 0.336448\n"
+      "Iteration 20/100 | Max Change (Delta): 0.336448\n",
+      "Iteration 30/100 | Max Change (Delta): 0.272142\n",
+      "Iteration 40/100 | Max Change (Delta): 0.220707\n",
+      "Iteration 50/100 | Max Change (Delta): 0.179464\n",
+      "Iteration 60/100 | Max Change (Delta): 0.144838\n",
+      "Iteration 70/100 | Max Change (Delta): 0.117497\n",
+      "Iteration 80/100 | Max Change (Delta): 0.095749\n",
+      "Iteration 90/100 | Max Change (Delta): 0.077484\n",
+      "Iteration 100/100 | Max Change (Delta): 0.062897\n",
+      "\n",
+      "Value iteration finished (max iterations reached).\n"
      ]
     }
    ],
