--- a/notebooks/simulate.ipynb
+++ b/notebooks/simulate.ipynb
@@ -10,12 +10,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from policy import DPAgent\n",
-    "from discrete_policy import DiscretizedDPAgent\n",
-    "from simulation import Simulator, CustomerGenerator\n",
-    "from hazard_models import ExponentialHazard\n",
-    "from utility_learner import ProjectedVolumeLearner\n",
-    "from degradation_learner import DegradationLearner\n",
+    "from raas.neural_policy import DPAgent\n",
+    "from raas.discrete_policy import DiscretizedDPAgent\n",
+    "from raas.simulation import Simulator, CustomerGenerator\n",
+    "from raas.hazard_models import ExponentialHazard\n",
+    "from raas.utility_learner import ProjectedVolumeLearner\n",
+    "from raas.degradation_learner import DegradationLearner\n",
     "from datetime import datetime\n",
     "from pytz import timezone\n",
     "\n",
@@ -24,7 +24,7 @@
     "import logging\n",
     "logging.basicConfig(level=logging.INFO)\n",
     "\n",
-    "from config import (\n",
+    "from raas.config import (\n",
     "    context_sampler,\n",
     "    rental_sampler,\n",
     "    interarrival_sampler,\n",
@@ -99,53 +99,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6ab40bba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Discretization setup:\n",
-      "  - Cumulative Context (cc):    50 steps up to 8.00\n",
-      "  - Cust. Degradation (cx):     50 steps up to 1.00\n",
-      "  - Cust. Revenue (cu):         50 steps up to 1.00\n",
-      "  - Rental Duration (T):        50 steps up to 0.76 (99.95th percentile)\n",
-      "  - Active Time (t):            50 steps up to 7.60\n",
-      "Pre-computing expectations from 100000 customer samples...\n",
-      "Starting Numba-accelerated pre-computation of arrival dynamics...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "OMP: Info #276: omp_set_nested routine deprecated, please use omp_set_max_active_levels instead.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pre-computation complete. ✅\n",
-      "\n",
-      "Starting Value Iteration...\n",
-      "Iteration 10/100 | Max Change (Delta): 0.419016\n",
-      "Iteration 20/100 | Max Change (Delta): 0.336448\n",
-      "Iteration 30/100 | Max Change (Delta): 0.272142\n",
-      "Iteration 40/100 | Max Change (Delta): 0.220707\n",
-      "Iteration 50/100 | Max Change (Delta): 0.179464\n",
-      "Iteration 60/100 | Max Change (Delta): 0.144838\n",
-      "Iteration 70/100 | Max Change (Delta): 0.117497\n",
-      "Iteration 80/100 | Max Change (Delta): 0.095749\n",
-      "Iteration 90/100 | Max Change (Delta): 0.077484\n",
-      "Iteration 100/100 | Max Change (Delta): 0.062897\n",
-      "\n",
-      "Value iteration finished (max iterations reached).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Lets you skip utility exploration with perfect u starting point\n",
     "simulator.projected_volume_learner.centroids.append(UTILITY_TRUE)\n",
